chore: Update League DTO to use liveScoreURL instead of url

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,9 @@
 services:
+  nats-server:
+    image: nats:2.10.0-alpine
+    ports:
+      - "4222:4222"
+
   db-competitions:
     container_name: competitions_database
     image: mysql:8.4.1
